* Fix snowmobile driver crashing the game.
* Fix knifethrower not throwing knife.
* Fix footprints not being cleared after level change.
* Fix thumbstick camera option sometimes producing jerky camera movements during object interaction.
* Fix inventory input interference when entering inventory via puzzle.
* Fix gamepad still vibrating if Lara was poisoned prior to death.
* Add TR1 cowboy.
* Add TR3 wall mounted blade.
* Add TR3 claw mutant.
* Add TR5 lasers
	- Choose colour for the lasers via tint menu.
	- Laser OCB means width of the laser in sectors.
	- Negative OCB laser will trigger heavy trigger.
	- Positive OCB kills Lara.
* Add removable puzzles from puzzle holes and puzzle dones.
	- Employed by setting the trigger type as "Switch" for either puzzle hole or puzzle done.
	- Can be mixed with puzzle done and puzzle holes of the same or different type.
* Add reusable keys for key holes.
	- Employed by setting the trigger type as "Switch" for key hole.
* Allow key hole animation to be played via OCB number.
	- Default OCB 0 will play Lara use key animation. 
	- Any positive OCB number will play the animation according to the OCB number.
* Add missing gunflash for some entities, also include dynamic light and smoke to all gunflashes.
* Add log reports if title level or other levels don't exist.
* Add better error handling for missing font, sprites or shaders.
* Add "Reset to defaults" entry to controls menu and automatically bind XBOX gamepad profile if connected.
* Add 64-bit executable and place both 32-bit and 64-bit versions into /Bin subdirectory.

Lua API changes:
* Add Vec2 class.
* Add function String::SetTranslated()
* Add function Misc::IsStringDisplaying()
* Add the following for use in AddCallback and RemoveCallback:
	- PRESTART, POSTSTART
	- PREEND, POSTEND
	- PRESAVE, POSTSAVE
	- PRELOAD, POSTLOAD

Version 1.0.8
=============

* Fix bubbles phasing through ceilings.
* Fix object camera not clearing at level end.